@@ -1,0 +1,168 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/preview"
+        android:contentDescription="@string/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitStart"
+        android:background="@drawable/image_border"
+        android:layout_above="@+id/downloadprogress"
+        android:layout_toLeftOf="@+id/numberpickers"
+        android:layout_toStartOf="@+id/numberpickers"/>
+    <TextView
+        android:id="@+id/timedown"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignBottom="@id/preview"
+        android:layout_alignLeft="@id/preview"
+        android:layout_alignRight="@id/preview"
+        android:layout_alignStart="@id/preview"
+        android:layout_alignEnd="@id/preview"
+        android:layout_alignTop="@id/preview"
+        android:layout_marginBottom="5sp"
+        android:background="#60ffffff"
+        android:gravity="center"
+        android:textSize="100sp"
+        android:typeface="monospace"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        tools:text=" 3/12" />
+    <ProgressBar
+        android:id="@+id/downloadprogress"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        tools:progress="25"
+        android:layout_above="@id/statusinfo"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/downloadprogresstext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/downloadprogress"
+        android:layout_alignLeft="@id/downloadprogress"
+        android:layout_alignStart="@id/downloadprogress"
+        android:layout_alignRight="@id/downloadprogress"
+        android:layout_alignEnd="@id/downloadprogress"
+        android:layout_alignTop="@id/downloadprogress"
+        android:background="#00000000"
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
+        tools:text="Downloading..."/>
+    <LinearLayout
+        android:id="@+id/numberpickers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+        <NumberPicker
+            android:id="@+id/frames"
+            android:layout_weight="1.0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp" />
+        <NumberPicker
+            android:id="@+id/delay"
+            android:layout_weight="1.0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/numberpickers"
+        android:layout_alignLeft="@+id/numberpickers"
+        android:layout_alignStart="@+id/numberpickers">
+        <Button
+            android:id="@+id/shutter"
+            android:layout_width="fill_parent"
+            android:layout_weight="1.0"
+            android:layout_height="wrap_content"
+            android:typeface="monospace"
+            android:text="@string/shutter"
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
+            android:background="#8000ff00" />
+        <Button
+            android:id="@+id/focus"
+            android:layout_width="fill_parent"
+            android:layout_weight="1.0"
+            android:layout_height="wrap_content"
+            android:typeface="monospace"
+            android:text="@string/focus"
+            android:layout_marginLeft="5sp"
+            android:layout_marginRight="5sp"
+            android:background="#8000ff00" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/statusinfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_above="@+id/camerainfo">
+    <TextView
+        android:id="@+id/currentshutterspeed"
+        android:layout_width="match_parent"
+        android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"
+        android:layout_marginRight="15sp"
+        android:layout_marginEnd="15sp"/>
+    <TextView
+        android:id="@+id/currentaperture"
+        android:layout_width="match_parent"
+        android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"
+        android:layout_marginRight="15sp"
+        android:layout_marginEnd="15sp"/>
+    <TextView
+        android:id="@+id/currentiso"
+        android:layout_width="match_parent"
+        android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"
+        android:layout_marginRight="15sp"
+        android:layout_marginEnd="15sp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/camerainfo"        
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_above="@+id/errortext"
+        android:layout_alignParentBottom="true">
+    <TextView
+        android:id="@+id/camerastatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"/>
+    <TextView
+        android:id="@+id/lensstatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:typeface="monospace"
+        android:gravity="end"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/errortext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#ff0000"
+        android:typeface="monospace"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
+
