@@ -18,4 +18,5 @@ There is NO WARRANTY, to the extent permitted by law.</string>
     <string name="weburl">http://pktriggercord.melda.info</string>
     <string name="shutter">Shutter</string>
     <string name="focus">Focus</string>
+    <string name="image">Image</string>
 </resources>
