@@ -15,6 +15,7 @@ version 0.84.05
 	Android: nicer image download indicator
 	GUI ISO table bugfix
 	Updating lens info database ( exiftool 10.64 )
+	Android: better support of landscape mode
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
